# killerbeez

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  IPT.md  LICENSE  Makefile  PersistenceMode.md  README.md
afl_progs/: afl-as.h  config.h
afl_progs/llvm_mode/: README.llvm  afl-clang-fast.c  afl-llvm-rt.o.c
afl_progs/qemu_mode/: README.qemu  build_qemu_support.sh
afl_progs/qemu_mode/patches/: afl-qemu-cpu-inl.h  afl-qemu-translate-inl.h  afl_qemu_optimize_entrypoint.diff
compilers/: Makefile
corpus/: CMakeLists.txt
corpus/afl_test/: Makefile  test.c
corpus/cgc/REMATCH_2--Mail_Server--Crackaddr/: notes.txt
corpus/cgc/REMATCH_2--Mail_Server--Crackaddr/inputs/: ADDRESSBOOK.txt  LIST.txt  LISTALL.txt  POST.txt  READ.txt  crash.txt
corpus/cgc/REMATCH_2--Mail_Server--Crackaddr/src/: sendmail.c
corpus/cgc/SOLFEDGE/: notes.txt
corpus/cgc/SOLFEDGE/inputs/: crash.txt  crash2.txt  input.txt
corpus/cgc/String_Storage_and_Retrieval/: notes.txt
corpus/cgc/String_Storage_and_Retrieval/inputs/: crash.txt  input.txt
corpus/cgc/UTF-late/: notes.txt
corpus/cgc/UTF-late/inputs/: crash.txt  input.txt
corpus/cgc/cotton_swab_arithmetic/: notes.txt
corpus/cgc/cotton_swab_arithmetic/inputs/: crash.txt  crash2.txt  input.txt
corpus/google/: README.md
corpus/google/vorbis/: build.sh  decode_fuzzer.cc  decode_fuzzer.exe.stackdump  notes.txt
corpus/hang/: CMakeLists.txt  hang-linux  hang.c
corpus/libtest/: CMakeLists.txt  Makefile  lib1.c  lib2.c  libs.h  test.c
corpus/network/: CMakeLists.txt  close.txt  multipart.txt  network.sln
corpus/network/client/: client.cpp  client.vcxproj  client.vcxproj.filters
corpus/network/server/: server-linux  server.cpp  server.vcxproj  server.vcxproj.filters
corpus/persist/: CMakeLists.txt  Makefile  test.c
corpus/test/: CMakeLists.txt  notes.txt  test-linux  test.c
corpus/test/inputs/: close.txt  input.txt  multipart.txt  telnet_multipart.txt
docs/: AFL.md  BUILD.md  CI.md  IPT.md  Makefile  README.md  README.txt  Server.md  api.tex  api_driver.tex  api_instrumentation.tex  api_mutator.tex  api_structures.tex  coverpage.tex  defines.tex  helpers.tex  packages.tex
docs/api/: README.txt  api.tex  api_driver.tex  api_instrumentation.tex  coverpage.tex  defines.tex  helpers.tex
docs/api/files/: driver_t.c
docs/files/: driver_t.c  instrumentation_edge_t.c  instrumentation_t.c  mutator_t.c
docs/paper/: Makefile  abstract.tex  acknowledgments.tex  background.tex  conclusion.tex  future_work.tex  implementation.tex  introduction.tex  killerbeez.tex  overview.tex  packages.tex  references.tex  related_work.tex
docs/paper/data/: Makefile  picker.gnuplot
driver/: CMakeLists.txt  driver.c  driver.h  driver_factory.c  driver_factory.h  file_driver.c  file_driver.h  network_client_driver.c  network_client_driver.h  network_driver.c  network_driver.h  network_server_driver.c  network_server_driver.h  putty_driver.c  putty_driver.h  stdin_driver.c  stdin_driver.h  wmp_driver.cpp  wmp_driver.h
fuzzer/: CMakeLists.txt  main.c
instrumentation/: CMakeLists.txt  afl_instrumentation.c  afl_instrumentation.h  debug_instrumentation.c  debug_instrumentation.h  dynamorio_instrumentation.c  dynamorio_instrumentation.h  fork_server.c  forkserver.c  forkserver.h  forkserver_config.h  forkserver_hooking.c  forkserver_internal.h  instrumentation.c  instrumentation.h  instrumentation_factory.c  instrumentation_factory.h  linux_ipt_instrumentation.c  linux_ipt_instrumentation.h  none_instrumentation.c  none_instrumentation.h  return_code_instrumentation.c  return_code_instrumentation.h  winafl_alloc_inl.h  winafl_config.h  winafl_debug.h  winafl_hash.h  winafl_types.h  wingui.c  wingui.h  xxhash.h
jansson/: CMakeLists.txt  dump.c  error.c  hashtable.c  hashtable.h  hashtable_seed.c  jansson.h  jansson_config.h  jansson_helper.c  jansson_helper.h  jansson_private.h  jansson_private_config.h  load.c  memory.c  pack_unpack.c  strbuffer.c  strbuffer.h  strconv.c  utf.c  utf.h  value.c
merger/: CMakeLists.txt  merger.c
mutators/: CMakeLists.txt  LICENSE
mutators/afl_mutator/: CMakeLists.txt  afl_mutator.c  afl_mutator.h
mutators/arithmetic_mutator/: CMakeLists.txt  arithmetic_mutator.c  arithmetic_mutator.h
mutators/bit_flip_mutator/: CMakeLists.txt  bit_flip_mutator.c  bit_flip_mutator.h
mutators/dictionary_mutator/: CMakeLists.txt  dictionary_mutator.c  dictionary_mutator.h
mutators/havoc_mutator/: CMakeLists.txt  havoc_mutator.c  havoc_mutator.h
mutators/honggfuzz_mutator/: CMakeLists.txt  honggfuzz_mutator.c  honggfuzz_mutator.h
mutators/interesting_value_mutator/: CMakeLists.txt  interesting_value_mutator.c  interesting_value_mutator.h
mutators/multipart_mutator/: CMakeLists.txt  multipart_mutator.c  multipart_mutator.h
mutators/mutator_tester/: CMakeLists.txt  mutator_tester.c  mutator_tester.h
mutators/mutators/: CMakeLists.txt  afl_config.h  afl_debug.h  afl_helpers.c  afl_helpers.h  afl_types.h  mutators.c  mutators.h
mutators/ni_mutator/: CMakeLists.txt  ni_mutator.c  ni_mutator.h
mutators/nop_mutator/: CMakeLists.txt  nop_mutator.c  nop_mutator.h
mutators/radamsa_mutator/: CMakeLists.txt  radamsa_mutator.c  radamsa_mutator.h
mutators/splice_mutator/: CMakeLists.txt  splice_mutator.c  splice_mutator.h
mutators/zzuf_mutator/: CMakeLists.txt  zzuf_mutator.c  zzuf_mutator.h
picker/: CMakeLists.txt  main.c
python/manager/: requirements.txt  server.py
server/: add_target.py  boinc_submit.py  killerbeez_assimilator.py  submit_api.py
tests/: build.bat  smoke_test.sh  test-fuzzer.sh
tools/: Dockerfile  README.md  release.bat  release_excludes.txt  release_vs2017.bat  release_vs2019.bat  setup_build_env.ps1  update_repos.bat
tracer/: CMakeLists.txt  main.c
utils/: XGetopt.c  global_types.h  mutator_factory.c  mutator_factory.h  utils.c  utils.h
vagrant/: README.md  dependencies.sh  setup.sh
vagrant/ci_runner/: Dockerfile  Vagrantfile  register_docker_runner.sh  runner.ps1  runner.sh  runner_vars.example
winafl/: CMakeLists.txt  modules.c  modules.h  utils.h  winafl.c
(+49 files in other folders)
